test/libsolidity/syntaxTests/constructor/interface_constructor.sol
interface I {
	constructor();
}
// ----
// TypeError 6482: (15-29='constructor();'): Constructor cannot be defined in interfaces.
// TypeError 5700: (15-29='constructor();'): Constructor must be implemented if declared.
